# name: TestPerson.test_group_query_includes_recording_events
  '
  
  SELECT $group_0 AS actor_id ,
         groupUniqArray(10)((timestamp,
                             uuid,
                             $session_id,
                             $window_id)) as matching_events
  FROM
    (SELECT e.timestamp as timestamp,
            e.$group_0 as $group_0,
            e."$window_id" as $window_id,
            e."$session_id" as $session_id,
            e.uuid as uuid
     FROM events e
     WHERE team_id = 2
       AND event = 'pageview'
       AND timestamp >= toDateTime('2021-01-21 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2021-01-21 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
# name: TestPerson.test_group_query_includes_recording_events.1
  '
  
  SELECT DISTINCT session_id
  FROM session_recording_events
  WHERE team_id = 2
    and has_full_snapshot = 1
    and session_id in ['s1']
  '
---
# name: TestPerson.test_person_query_does_not_include_recording_events_if_flag_not_set
  '
  
  SELECT person_id AS actor_id
  FROM
    (SELECT e.timestamp as timestamp,
            pdi.person_id as person_id,
            e.distinct_id as distinct_id,
            e.team_id as team_id
     FROM events e
     INNER JOIN
       (SELECT distinct_id,
               argMax(person_id, version) as person_id
        FROM person_distinct_id2
        WHERE team_id = 2
        GROUP BY distinct_id
        HAVING argMax(is_deleted, version) = 0) AS pdi ON e.distinct_id = pdi.distinct_id
     INNER JOIN
       (SELECT id
        FROM person
        WHERE team_id = 2
        GROUP BY id
        HAVING max(is_deleted) = 0) person ON person.id = pdi.person_id
     WHERE team_id = 2
       AND event = 'pageview'
       AND timestamp >= toDateTime('2021-01-21 00:00:00', 'UTC')
       AND timestamp <= toDateTime('2021-01-21 23:59:59', 'UTC') )
  GROUP BY actor_id
  LIMIT 200
  OFFSET 0
  '
---
